Fix(STN-841):  Collections paragraph type spacing to match Rows (#959)
* feat(STN-841): fix spacing for collections similar to row

* feat: adding .item-per-row instances to account for min-width

* chore: compile css

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.timeline-item.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.timeline-item.scss
@@ -17,7 +17,8 @@
     height: 0; // remove the vertical pipe that connects timeline items from the last item
   }
 
-  .field-hs-row-components[class*="counted-items-"] & {
+  .field-hs-row-components[class*="counted-items-"] &,
+  .field-hs-collection-items[class*="item-per-row--"] & {
     margin-bottom: 0 !important;
   }
 }
