--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
@@ -9,6 +9,9 @@
     .counted-items-2.field-hs-row-components > .paragraph-item,
     .counted-items-3.field-hs-row-components > .paragraph-item,
     .counted-items-4.field-hs-row-components > .paragraph-item,
+    .item-per-row--2.field-hs-row-components > .paragraph-item,
+    .item-per-row--3.field-hs-row-components > .paragraph-item,
+    .item-per-row--4.field-hs-row-components > .paragraph-item,
     .paragraph-item {
       .field__item__label {
         margin-top: 0;
@@ -50,7 +53,7 @@
       width: 100%;
     }
 
-    .field-hs-row-components {
+    .field-hs-row-components, .field-hs-collection-items {
       @include hb-page-width;
     }
   }
@@ -61,7 +64,9 @@
 // support CSS Grid will continue to recieve the flexbox styles.
 // See docroot/modules/humsci/hs_paragraph_types/modules/hs_row/modules/hs_row_display/scss/hs_row_display.scss
 // for fallback styles.
-.field-hs-row-components {
+// Collections items have been added to this group, base Collection styles here: docroot/modules/humsci/hs_paragraph_types/css/hs_collection.css
+.field-hs-row-components,
+.field-hs-collection-items {
   // When there is more than one item in a row it uses grid (and flexbox as a fallback)
   // however when there is only one item in a row and we use flexbox it causes overflow issues in IE 11.
   @supports (display: grid) {
@@ -71,7 +76,7 @@
     }
 
     @for $i from 1 through $hb-counted-items-count {
-      &.counted-items-#{$i} {
+      &.counted-items-#{$i}, &.item-per-row--#{$i} {
         @include grid-media-min('sm') {
           grid-template-columns: repeat(2, 1fr);
         }
@@ -91,7 +96,7 @@
     }
 
     @for $i from 1 through $hb-counted-items-count {
-      &.counted-items-#{$i} {
+      &.counted-items-#{$i}, &.item-per-row--#{$i} {
         .paragraph-item {
           @include hb-column($i);
         }
@@ -99,13 +104,18 @@
     }
   }
 
-  &.counted-items-1 {
+  &.counted-items-1,
+  &.item-per-row--1 {
     display: block;
   }
 
+  // counted-items are Row items, items-per-row are Collection items
   &.counted-items-2,
   &.counted-items-3,
-  &.counted-items-4 {
+  &.counted-items-4,
+  &.item-per-row--2,
+  &.item-per-row--3,
+  &.item-per-row--4 {
     display: block;
 
     @include grid-media-min('sm') {
@@ -117,7 +127,7 @@
 
       .hs-paragraph-style--well &,
       .hs-paragraph-style--well-full-width & {
-        margin: hb-spacing-width() 0;
+        margin: hb-spacing-width() auto;
       }
     }
 
